--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>𝗣𝗥𝗘𝗠𝗜𝗨𝗠 𝗡𝗢𝗧𝗘𝗦</title>
-    <link rel="icon" href="https://i.ibb.co/yFXqs3wZ/x.jpg" type="image/x-icon">
+    <link rel="icon" href="https://i.ibb.co/MD2rXbQX/x.jpg" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -164,7 +164,7 @@
          <marquee behavior="alternate" direction="left" scrollamount="2" width="100%" height="30" onmouseover="this.stop()" onmouseout="this.start()" loop="10000" style="animation: slide 5s linear infinite alternate; font-size: 2em; color: yellow;">By HACKHEIST 😈</marquee>
     </div>
      <div class="circle-image">
-        <img src="https://i.ibb.co/yFXqs3wZ/x.jpg" alt="Profile Image">
+        <img src="https://i.ibb.co/MD2rXbQX/x.jpg" alt="Profile Image">
     </div>
 
     <h2 id="subject-title" class="title">😃 𝗣𝗥𝗘𝗠𝗜𝗨𝗠 𝗡𝗢𝗧𝗘𝗦 🫂</h2>
