--- a/index.html
+++ b/index.html
@@ -190,6 +190,30 @@
 
 <script>
 const firstcardsData = [
+
+    {
+        text: '𝗘𝗟𝗜𝗘𝗡 𝗦𝗛𝗘𝗘𝗧 𝗦𝗢𝗟𝗨𝗧𝗜𝗢𝗡𝗦 👑 ',
+        secondcards: [
+            {
+                text: '𝟏𝟏𝐭𝐡(𝐍𝐔𝐓𝐔𝐑𝐄)',
+                subcards: [
+                    { text: 'MATHS(SHEET+RACES)', url: 'https://opmasterweb.github.io/servers/?token=Z2V0LTQ1Mjc3NjA3ODc4Njk1NzIwLTQ1Mzg1ODc3MTUwMjc1NDY0' },
+{ text: 'CHEMISTRY(SHEET+SOLN)', url: 'https://opmasterweb.github.io/servers/?token=Z2V0LTQ1Mzg2ODc5NjQzNTMwODMyLTQ1NDIzOTcxODkzOTc5NDQ4' },
+{ text: 'CHEMISTRY(RACES+SOLN)', url: 'https://opmasterweb.github.io/servers/?token=Z2V0LTQ1NDI0OTc0Mzg3MjM0ODE2LTQ1NDg5MTMzOTU1NTc4MzY4' },
+{ text: 'PHYSICS(SHEETS+SOLN)', url: 'https://opmasterweb.github.io/servers/?token=Z2V0LTQ1NDkwMTM2NDQ4ODMzNzM2LTQ1NTIyMjE2MjMzMDA1NTEy' },
+{ text: 'PHYSICS(RACES+SOLN)', url: 'https://opmasterweb.github.io/servers/?token=Z2V0LTQ1NTIzMjE4NzI2MjYwODgwLTQ1NTgyMzY1ODI4MzI3NTky' }
+                ]
+            },
+            {
+                text: '𝟏𝟐𝐭𝐡(𝐄𝐍𝐓𝐇𝐔𝐒𝐄)',
+                subcards: [
+                    { text: 'MATHS(SHEET+RACES)', url: 'https://opmasterweb.github.io/servers/?token=Z2V0LTQ1NTgzMzY4MzIxNTgyOTYwLTQ1NjM3NTAyOTU3MzcyODMy' },
+{ text: 'CHEMISTRY(SHEET+RACES)', url: 'https://opmasterweb.github.io/servers/?token=Z2V0LTQ1NjM4NTA1NDUwNjI4MjAwLTQ1Nzc1ODQ3MDI2NjEzNjE2' },
+{ text: 'MATHS(SHEET+RACES)', url: 'https://opmasterweb.github.io/servers/?token=Z2V0LTQ1Nzc2ODQ5NTE5ODY4OTg0LTQ1ODMxOTg2NjQ4OTE0MjI0' }
+                 ]
+              }
+            ]
+    },
          {
         text: '𝗠𝗮𝗻𝘇𝗶𝗹 𝗣𝗮𝗼',
         secondcards: [
